--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>HomeAngular</title>
   <base href="/">
 
+  <!--<script src="../node_modules/angu"-->
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
